--- a/app/bower.json
+++ b/app/bower.json
@@ -3,17 +3,12 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "1.2.7",
-    "angular-resource" : "1.2.7",
-    "angular-cookies" : "1.2.7",
-    "angular-route" : "1.2.7",
-    "angular-bootstrap": "~0.5.0",
-    "modernizr": "*",
-    "json3": "~3.2.4",
+    "angular-resource": "1.2.7",
+    "angular-cookies": "1.2.7",
+    "angular-route": "1.2.7",
+    "angular-bootstrap": "~0.6.0",
     "jquery": "1.10.2",
-    "jquery.cookie": "*",
-    "jquery-ui-touch-punch": "*",
-    "fullcalendar": "~1.6.3",
-    "excanvas": "*",
-    "raphael": "2.1.0"
+    "jquery-migrate": "1.2.1",
+    "jquery.cookie": "*"
   }
 }
