--- a/app/bower.json
+++ b/app/bower.json
@@ -2,10 +2,10 @@
   "name": "Exrpo CRM",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "1.2.7",
-    "angular-resource": "1.2.7",
-    "angular-cookies": "1.2.7",
-    "angular-route": "1.2.7",
+    "angular": "guanbo/bower-angular#1.2.9",
+    "angular-resource": "1.2.9",
+    "angular-cookies": "1.2.9",
+    "angular-route": "1.2.9",
     "angular-bootstrap": "~0.6.0",
     "jquery": "1.10.2",
     "jquery-migrate": "1.2.1",
