--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "gulp-concat": "~2.1.7",
     "gulp-livereload": "~0.1.1",
     "tiny-lr": "0.0.5",
-    "gulp-styl": "~0.1.2",
-    "phantomjs": "~1.9",
-    "karma": "~0.10",
-    "karma-junit-reporter": "~0.1",
-    "karma-jasmine": "~0.1",
-    "karma-ng-scenario": "~0.1"
+    "gulp-styl": "~0.1.2"
   },
   "bugs": {
     "url": "https://github.com/extensivepro/exprocrm/issues"
