--- a/app/bower.json
+++ b/app/bower.json
@@ -12,6 +12,8 @@
     "jquery.cookie": "*",
     "angular-google-chart": "~0.0.6",
     "autofill-event": "~1.0.0",
-    "angular-ui-utils": "bower"
+    "angular-ui-utils": "bower",
+    "moment": "*",
+    "ng-bs-daterangepicker":"*"
   }
 }
