--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "karma-requirejs": "~0.2.1",
     "karma-script-launcher": "~0.1.0",
     "phantomjs": "~1.9.2-6",
-    "requirejs": "~2.1.9"
+    "requirejs": "~2.1.9",
+    "moment": "*"
   },
   "scripts": {
     "test": "gulp test",
