--- a/app/bower.json
+++ b/app/bower.json
@@ -14,6 +14,7 @@
     "autofill-event": "~1.0.0",
     "angular-ui-utils": "bower",
     "moment": "*",
-    "ng-bs-daterangepicker":"*"
+    "ng-bs-daterangepicker":"*",
+    "bootstrap": "3.0.0"
   }
 }
