Update: 将bower配置文件移到根目录下

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "test": "gulp test",
-    "postinstall": "cd app || true; bower install"
+    "postinstall": "bower install"
   },
   "keywords": [
     "expro",
