--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,9 @@
     "angular-google-chart": "~0.0.6",
     "autofill-event": "~1.0.0",
     "angular-ui-utils": "bower",
-    "moment": "*",
+    "moment": "https://github.com/leonardean/moment.git#d8a45078ce36dd029818dfdcd1bdad50892aac0f",
     "ng-bs-daterangepicker":"*",
-    "bootstrap": "3.0.0"
+    "bootstrap": "3.0.0",
+    "bootstrap-daterangepicker": "https://github.com/leonardean/bootstrap-daterangepicker.git#12d862268fe5eab643dc6314511671b4fa19deb6"
   }
 }
