--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "jquery": "2.1.0",
     "jquery-migrate": "1.2.1",
     "jquery.cookie": "*",
-    "angular-google-chart": "~0.0.6",
+    "angular-google-chart": "https://github.com/leonardean/angular-google-chart.git#49dbaea8a2b8b0cf4a9c7346832467d4012fb7c1",
     "autofill-event": "~1.0.0",
     "angular-ui-utils": "bower",
     "moment": "https://github.com/leonardean/moment.git#d8a45078ce36dd029818dfdcd1bdad50892aac0f",
