Close #212, 实现销售记录导出excel

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "ng-bs-daterangepicker": "*",
     "bootstrap": "3.0.0",
     "bootstrap-daterangepicker": "https://github.com/leonardean/bootstrap-daterangepicker.git#12d862268fe5eab643dc6314511671b4fa19deb6",
-    "angular-animate": "~1.2.15"
+    "angular-animate": "~1.2.15",
+    "file-saver": "*",
+    "ionicons": "*"
   }
 }
