--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
     "ionicons": "*",
     "angular-local-storage": "~0.0.5",
     "angular-file-upload": "~0.5.7",
-    "ng-csv": "~0.2.1"
+    "ng-csv": "https://github.com/guanbo/ng-csv.git#87d8cf3562cfeb854a0652354dfcaed6202a0f77"
   }
 }
