--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "karma-script-launcher": "~0.1.0",
     "phantomjs": "~1.9.2-6",
     "requirejs": "~2.1.9",
-    "moment": "*"
+    "moment": "*",
+    "gulp-uglify": "~0.3.1",
+    "gulp-ng-annotate": "~0.2.0",
+    "gulp-sourcemaps": "~1.1.0"
   },
   "scripts": {
     "test": "gulp test",
